# ssti-scanner

./: CONTEXT.md  DOCUMENTATION_UPDATE_SUMMARY.md  Dockerfile  LICENSE  Makefile  PROJECT_STRUCTURE.md  README.md  REQUIREMENTS.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
config/: default.yml
docs/: API.md  CLI_GUIDE.md  INSTALLATION.md  README.md
examples/: README.md  basic_scan.py  file_input.py
src/engines/: twig_engine.py
src/ssti_scanner/: __init__.py
src/ssti_scanner/cli/: __init__.py  commands.py  main.py
src/ssti_scanner/core/: __init__.py  config.py  engine_manager.py  form_analyzer.py  result.py  result_correlator.py  scanner.py
src/ssti_scanner/crawler/: __init__.py  web_crawler.py
src/ssti_scanner/detectors/: __init__.py  detection_engine.py
src/ssti_scanner/engines/: __init__.py  base.py  django_engine.py  engine_factory.py  erb_engine.py  freemarker_engine.py  handlebars_engine.py  jinja2_engine.py  smarty_engine.py  thymeleaf_engine.py  twig_engine.py  velocity_engine.py
src/ssti_scanner/input/: __init__.py  url_list_processor.py
src/ssti_scanner/payloads/: __init__.py  context_analyzer.py  payload_generator.py  payload_manager.py
src/ssti_scanner/reporters/: __init__.py  base_reporter.py  console_reporter.py  csv_reporter.py  html_reporter.py  json_reporter.py  reporter_factory.py  xml_reporter.py
src/ssti_scanner/utils/: __init__.py  http_client.py  logger.py
tests/: conftest.py  run_tests.py  test_config.py  test_conftest.py  test_engines.py  test_http_client.py
tests/integration/: README.md  config.ini  requirements.txt  run_integration_tests.py  validate_framework.py  vulnerable_app_manager.py
tests/integration/vulnerable_apps/: README.md  docker-compose.yml  manage_docker.ps1  manage_docker.sh
tests/integration/vulnerable_apps/java/freemarker_spring/: Dockerfile  pom.xml
tests/integration/vulnerable_apps/java/freemarker_spring/src/main/java/com/ssti/test/freemarker/: FreeMarkerSSTIApp.java
tests/integration/vulnerable_apps/java/freemarker_spring/src/main/resources/templates/: index.ftl  profile_form.ftl
tests/integration/vulnerable_apps/php/smarty/: Dockerfile  app.php  composer.json  routes.php
tests/integration/vulnerable_apps/php/twig_symfony/: Dockerfile  app.php  composer.json  routes.php
tests/integration/vulnerable_apps/python/django_templates/: Dockerfile  app.py  requirements.txt  routes.py
tests/integration/vulnerable_apps/python/jinja2_flask/: Dockerfile  app.py  requirements.txt  routes.py
